--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-kapt'
+    id 'kotlin-android'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -29,6 +33,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures.dataBinding = true
+
 }
 
 dependencies {
@@ -40,4 +47,53 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    implementation project (":domain")
+    implementation project (":data")
+
+
+    //Navigation
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
+    implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
+    // Testing Navigation
+    androidTestImplementation("androidx.navigation:navigation-testing:2.5.3")
+
+    // viewmodel scope
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
+    // lifecycle scope
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.5.1")
+
+    // Coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+
+    //Room
+    implementation("androidx.room:room-runtime:2.4.3")
+    kapt("androidx.room:room-compiler:2.4.3")
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:2.4.3")
+
+    // Hilt
+    implementation("com.google.dagger:hilt-android:2.43.2")
+    kapt("com.google.dagger:hilt-compiler:2.43.2")
+
+    // Paging
+    implementation("androidx.paging:paging-runtime:3.1.1")
+    // alternatively - without Android dependencies for tests
+    testImplementation("androidx.paging:paging-common:3.1.1")
+    // optional - Paging 3 Integration
+    implementation("androidx.room:room-paging:2.4.3")
+
+    // Retrofit2
+    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
+
+    // Moshi(Retrofit Converter)
+    implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
+    implementation("com.squareup.moshi:moshi:1.13.0")
+
+    // Preferences Data Store
+    implementation "androidx.datastore:datastore-preferences:1.1.0-alpha01"
+    implementation "androidx.datastore:datastore-core:1.1.0-alpha01"
 }
